--- a/Main code/GEM/GEM.Android/GEM.Android.csproj
+++ b/Main code/GEM/GEM.Android/GEM.Android.csproj
@@ -127,5 +127,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\GemIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\icon.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
